Warnings solved